--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.58.5",
     "@react-three/fiber": "^8.12.0",
+    "axios": "^1.3.5",
     "framer-motion": "^10.9.1",
     "maath": "^0.5.3",
     "react": "^18.2.0",
