--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-parallax-tilt": "^1.7.120",
     "react-router-dom": "^6.9.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
